Bug 1471381 - Don't give up on rounded rects in DisplayItemClip r=mattwoodrow

Effectively we compute the diff by lopping off the rounded part
of each rect where appropriate. This gets a bit weird to think
about with very mismatched radii, but I think it works out(?)

MozReview-Commit-ID: 472gx7Hw1Br